[gd_scene load_steps=21 format=2]

[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Operators/minus.png" type="Texture" id=2]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Symbols/Smiley.png" type="Texture" id=6]
[ext_resource path="res://Assets/Numbers/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=8]
[ext_resource path="res://Assets/Numbers/4.png" type="Texture" id=9]
[ext_resource path="res://Assets/Numbers/8.png" type="Texture" id=10]
[ext_resource path="res://Assets/Symbols/Dizzie.png" type="Texture" id=11]
[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=12]
[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Numbers/3.png" type="Texture" id=14]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=15]
[ext_resource path="res://Assets/Numbers/9.png" type="Texture" id=16]
[ext_resource path="res://Assets/Symbols/Laughy.png" type="Texture" id=17]
[ext_resource path="res://Assets/Numbers/7.png" type="Texture" id=18]
[ext_resource path="res://Assets/Numbers/6.png" type="Texture" id=19]
[ext_resource path="res://Levels/Level15/Level15.gd" type="Script" id=20]

[node name="Level15" instance=ExtResource( 13 )]
script = ExtResource( 20 )

[node name="TrueRect" parent="." index="0"]
margin_left = 39.7257
margin_top = 89.3348
margin_right = 55.7257
margin_bottom = 105.335
rect_scale = Vector2( 40, 30 )

[node name="TextureRect" type="TextureRect" parent="." index="6"]
margin_left = 200.258
margin_top = 163.41
margin_right = 216.258
margin_bottom = 179.41
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect16" type="TextureRect" parent="." index="7"]
margin_left = 101.369
margin_top = 459.189
margin_right = 117.369
margin_bottom = 475.189
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect19" type="TextureRect" parent="." index="8"]
margin_left = 469.817
margin_top = 459.487
margin_right = 485.817
margin_bottom = 475.487
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect22" type="TextureRect" parent="." index="9"]
margin_left = 292.428
margin_top = 459.785
margin_right = 308.428
margin_bottom = 475.785
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="." index="10"]
margin_left = 319.374
margin_top = 251.811
margin_right = 335.374
margin_bottom = 267.811
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )

[node name="TextureRect4" type="TextureRect" parent="." index="11"]
margin_left = 268.435
margin_top = 164.118
margin_right = 284.435
margin_bottom = 180.118
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 12 )

[node name="TextureRect7" type="TextureRect" parent="." index="12"]
margin_left = 261.777
margin_top = 253.339
margin_right = 277.777
margin_bottom = 269.339
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="TextureRect9" type="TextureRect" parent="." index="13"]
margin_left = 263.275
margin_top = 347.732
margin_right = 279.275
margin_bottom = 363.733
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[node name="TextureRect2" type="TextureRect" parent="." index="14"]
margin_left = 199.199
margin_top = 347.757
margin_right = 215.199
margin_bottom = 363.757
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[node name="TextureRect8" type="TextureRect" parent="." index="15"]
margin_left = 195.453
margin_top = 251.116
margin_right = 211.453
margin_bottom = 267.116
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[node name="TextureRect3" type="TextureRect" parent="." index="16"]
margin_left = 319.813
margin_top = 346.841
margin_right = 335.813
margin_bottom = 362.841
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 17 )

[node name="TextureRect5" type="TextureRect" parent="." index="17"]
margin_left = 319.785
margin_top = 164.724
margin_right = 335.785
margin_bottom = 180.724
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 17 )

[node name="TextureRect6" type="TextureRect" parent="." index="18"]
margin_left = 384.461
margin_top = 165.431
margin_right = 400.461
margin_bottom = 181.431
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect17" type="TextureRect" parent="." index="19"]
margin_left = 155.5
margin_top = 458.537
margin_right = 171.5
margin_bottom = 474.537
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect20" type="TextureRect" parent="." index="20"]
margin_left = 338.134
margin_top = 458.537
margin_right = 354.134
margin_bottom = 474.537
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect23" type="TextureRect" parent="." index="21"]
margin_left = 514.532
margin_top = 458.537
margin_right = 530.532
margin_bottom = 474.537
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect18" type="TextureRect" parent="." index="22"]
margin_left = 203.608
margin_top = 460.319
margin_right = 219.608
margin_bottom = 476.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect21" type="TextureRect" parent="." index="23"]
margin_left = 381.788
margin_top = 460.319
margin_right = 397.788
margin_bottom = 476.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect24" type="TextureRect" parent="." index="24"]
margin_left = 560.859
margin_top = 460.319
margin_right = 576.859
margin_bottom = 476.319
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect13" type="TextureRect" parent="." index="25"]
margin_left = 451.733
margin_top = 164.59
margin_right = 467.733
margin_bottom = 180.59
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect14" type="TextureRect" parent="." index="26"]
margin_left = 451.733
margin_top = 252.884
margin_right = 467.733
margin_bottom = 268.885
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect15" type="TextureRect" parent="." index="27"]
margin_left = 453.414
margin_top = 349.587
margin_right = 469.414
margin_bottom = 365.588
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect11" type="TextureRect" parent="." index="28"]
margin_left = 384.461
margin_top = 253.082
margin_right = 400.461
margin_bottom = 269.082
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="TextureRect12" type="TextureRect" parent="." index="29"]
margin_left = 388.207
margin_top = 347.476
margin_right = 404.207
margin_bottom = 363.476
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="MovableButton" parent="." index="30" instance=ExtResource( 3 )]
margin_left = 733.18
margin_top = 105.972
margin_right = 749.18
margin_bottom = 121.972
texture_normal = ExtResource( 14 )
text = ExtResource( 14 )

[node name="MovableButton2" parent="." index="31" instance=ExtResource( 3 )]
margin_left = 924.642
margin_top = 299.813
margin_right = 940.642
margin_bottom = 315.813
texture_normal = ExtResource( 7 )
text = ExtResource( 7 )

[node name="MovableButton4" parent="." index="32" instance=ExtResource( 3 )]
margin_left = 848.315
margin_top = 187.567
margin_right = 864.315
margin_bottom = 203.567
texture_normal = ExtResource( 18 )
text = ExtResource( 18 )

[node name="MovableButton5" parent="." index="33" instance=ExtResource( 3 )]
margin_left = 943.724
margin_top = 101.137
margin_right = 959.724
margin_bottom = 117.137
text = ExtResource( 5 )

[node name="MovableButton6" parent="." index="34" instance=ExtResource( 3 )]
margin_left = 840.457
margin_top = 43.8918
margin_right = 856.457
margin_bottom = 59.8918
texture_normal = ExtResource( 15 )
text = ExtResource( 15 )

[node name="MovableButton3" parent="." index="35" instance=ExtResource( 3 )]
margin_left = 759.342
margin_top = 306.948
margin_right = 775.342
margin_bottom = 322.948
texture_normal = ExtResource( 16 )
text = ExtResource( 16 )

[node name="FadingLabel" parent="." index="36" instance=ExtResource( 1 )]
margin_left = 32.7999
margin_top = 37.5838
margin_right = 290.8
margin_bottom = 62.5838
bbcode_enabled = false
bbcode_text = ""
text = "Woah, that's a huge box."

[node name="FadingLabel2" parent="." index="37" instance=ExtResource( 1 )]
margin_left = 390.119
margin_top = 32.5838
margin_right = 648.119
margin_bottom = 63.5838
bbcode_text = "
[wave]TRULY OUTSTANDING![/wave]"
text = "
TRULY OUTSTANDING!"
